--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   --color-scroll-thumb: rgba(216, 216, 216, 0.3);
 
   --radius: 12px;
-  --padding: 4px;
+  --padding: 2px;
 
   --hud-height: 60px;
   --hud-button-margin: 4px;
